fixed reputation related code and added 'select difficulty' text